# python-template-repo

./: README.md  cookiecutter.json
{{cookiecutter.repo_name}}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.repo_name}}/.github/workflows/: ci-testing.yml
{{cookiecutter.repo_name}}/tests/: test_{{cookiecutter.script_name}}.py
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/: {{cookiecutter.script_name}}.py
