[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "{{cookiecutter.package_name}}"}]

[tool.poetry.dependencies]
python = "^3.9"
fire = "^0.4.0"
tqdm = "^4.64.1"
loguru = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[tool.poetry.scripts]
{{cookiecutter.script_name}} = "{{cookiecutter.package_name}}.{{cookiecutter.script_name}}:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
