[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "{{cookiecutter.package_name}}"}]

[tool.poetry.dependencies]
python = "^3.12"
fire = "^0.6.0"
tqdm = "^4.66.4"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[tool.poetry.scripts]
translate = "report_translator.translate:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
